Name:           bustle
Category:       Network, Desktop
Version:        0.3.1
Cabal-Version:  >= 1.6
Synopsis:       Draw pretty sequence diagrams of D-Bus traffic
Description:    Draw pretty sequence diagrams of D-Bus traffic
License:        OtherLicense
License-file:   LICENSE
Author:         Will Thompson <will.thompson@collabora.co.uk>
Maintainer:     Will Thompson <will.thompson@collabora.co.uk>
Data-files:     data/bustle.png,
                data/dfeet-method.png,
                data/dfeet-signal.png,
                data/bustle.glade,
                LICENSE
Build-type:     Simple
Extra-source-files: c-sources/bustle-dbus-monitor.c,
                    c-sources/bustle-pcap.c,
                    Makefile,
                    README,
                    NEWS,
                    HACKING,
                    INSTALL,
                    bustle.sh,
                    run-uninstalled.sh

Source-Repository head
  Type:           git
  Location:       git://anongit.freedesktop.org/bustle

Flag PostCabalizedGtk2HS
  Description:    Build against recent gtk2hs, with reorganized packaging and
                  module names
  Default:        True

Executable bustle
  Main-is:       Bustle.hs
  Other-modules: Bustle.Application.Monad
               , Bustle.Diagram
               , Bustle.Loader
               , Bustle.Loader.OldSkool
               , Bustle.Loader.Pcap
               , Bustle.Markup
               , Bustle.Noninteractive
               , Bustle.Regions
               , Bustle.Renderer
               , Bustle.StatisticsPane
               , Bustle.Stats
               , Bustle.Types
               , Bustle.UI
               , Bustle.UI.DetailsView
               , Bustle.UI.FilterDialog
               , Bustle.Upgrade
               , Bustle.Util
               , Bustle.VariantFormatter
  Ghc-options:    -Wall -fno-warn-unused-imports -fno-warn-unused-do-bind

  if flag(PostCabalizedGtk2HS)
    -- Since gtk2hs 0.11, pango is a separate package, and its module names
    -- have changed.
    Build-Depends: base >= 4 && < 5
                 , binary
                 , bytestring
                 , cairo
                 , containers
                 , dbus-core == 0.9.*
                 , filepath
                 , glade
                 , glib
                 , gtk > 0.11
                 , haskell98
                 , mtl
                 , pango
                 , parsec
                 , pcap
                 , process
                 , text
  else
    Build-Depends: base >= 4 && < 5
                 , binary
                 , bytestring
                 , cairo
                 , containers
                 , dbus-core == 0.9.*
                 , filepath
                 , glade
                 , glib
                 , gtk > 0.10 && < 0.11
                 , haskell98
                 , mtl
                 , pango
                 , parsec
                 , pcap
                 , process
                 , text
