Name:           bustle
Category:       Network, Desktop
Version:        0.4.0.1
Cabal-Version:  >= 1.8
Synopsis:       Draw pretty sequence diagrams of D-Bus traffic
Description:    Draw pretty sequence diagrams of D-Bus traffic
License:        OtherLicense
License-file:   LICENSE
Author:         Will Thompson <will.thompson@collabora.co.uk>
Maintainer:     Will Thompson <will.thompson@collabora.co.uk>
Data-files:     data/bustle.png,
                data/dfeet-method.png,
                data/dfeet-signal.png,
                data/bustle.ui,
                LICENSE
Build-type:     Simple
Extra-source-files:
                  -- C bits
                    c-sources/bustle-pcap.c,
                    c-sources/pcap-monitor.h,
                    Makefile,

                  -- Stuff for nerds
                    README,
                    NEWS,
                    HACKING,
                    INSTALL,
                    run-uninstalled.sh
                  , Test/data/log-with-h.bustle

                  -- Stuff for the stupid binary tarballs
                  , bustle.sh
                  , ldd-me-up.sh
                  , LICENSE.bundled-libraries


Source-Repository head
  Type:           git
  Location:       git://anongit.freedesktop.org/bustle

Flag PostCabalizedGtk2HS
  Description:    Build against recent gtk2hs, with reorganized packaging and
                  module names
  Default:        True

Flag InteractiveTests
  Description:    Build interactive test programs
  Default:        False

Executable bustle
  Main-is:       Bustle.hs
  Other-modules: Bustle.Application.Monad
               , Bustle.Diagram
               , Bustle.Loader
               , Bustle.Loader.OldSkool
               , Bustle.Loader.Pcap
               , Bustle.Markup
               , Bustle.Monitor
               , Bustle.Noninteractive
               , Bustle.Regions
               , Bustle.Renderer
               , Bustle.StatisticsPane
               , Bustle.Stats
               , Bustle.Types
               , Bustle.UI
               , Bustle.UI.AboutDialog
               , Bustle.UI.Canvas
               , Bustle.UI.DetailsView
               , Bustle.UI.FilterDialog
               , Bustle.UI.OpenTwoDialog
               , Bustle.UI.Recorder
               , Bustle.UI.Util
               , Bustle.Upgrade
               , Bustle.Util
               , Bustle.VariantFormatter
  Ghc-options: -threaded
               -Wall
               -fno-warn-unused-imports
               -fno-warn-unused-do-bind
  C-sources: c-sources/pcap-monitor.c
  pkgconfig-depends: glib-2.0

  if flag(PostCabalizedGtk2HS)
    -- Since gtk2hs 0.11, pango is a separate package, and its module names
    -- have changed.
    Build-Depends: base >= 4 && < 5
                 , binary
                 , bytestring
                 , cairo
                 , containers
                 , dbus-core == 0.9.*
                 , directory
                 , filepath
                 , glade
                 , glib
                 , gtk > 0.11
                 , haskell98
                 , mtl
                 , pango
                 , parsec
                 , pcap
                 , process
                 , text
                 , time
  else
    Build-Depends: base >= 4 && < 5
                 , binary
                 , bytestring
                 , cairo
                 , containers
                 , dbus-core == 0.9.*
                 , directory
                 , filepath
                 , glade
                 , glib
                 , gtk > 0.10 && < 0.11
                 , haskell98
                 , mtl
                 , pango
                 , parsec
                 , pcap
                 , process
                 , text
                 , time

Executable test-monitor
  if flag(InteractiveTests) && flag(PostCabalizedGtk2HS)
    buildable: True
  else
    buildable: False

  main-is: tests/Monitor.hs
  other-modules: Bustle.Monitor
  Ghc-options: -threaded
  C-sources: c-sources/pcap-monitor.c
  pkgconfig-depends: glib-2.0
  Build-Depends: base >= 4 && < 5
               , gtk > 0.11
               , glib

Executable dump-messages
  if flag(InteractiveTests) && flag(PostCabalizedGtk2HS)
    buildable: True
  else
    buildable: False

  main-is: Test/DumpMessages.hs
  Build-Depends: base
               , binary
               , bytestring
               , containers
               , dbus-core == 0.9.*
               , mtl
               , pcap
               , text

Test-suite test-pcap-crash
    type: exitcode-stdio-1.0
    main-is: Test/PcapCrash.hs
    other-modules: Bustle.Loader.Pcap
    Build-Depends: base
                 , binary
                 , bytestring
                 , containers
                 , dbus-core == 0.9.*
                 , mtl
                 , pcap
                 , text

Test-suite test-regions
    type: exitcode-stdio-1.0
    main-is: Test/Regions.hs
    other-modules: Bustle.Regions
    Build-Depends: base
                 , QuickCheck

Test-suite test-renderer
    type: exitcode-stdio-1.0
    main-is: Test/Renderer.hs
    other-modules: Bustle.Renderer
    Build-Depends: base
                 , cairo
                 , containers
                 , dbus-core
                 , directory
                 , filepath
                 , gtk
                 , mtl
                 , pango
                 , test-framework
                 , test-framework-hunit
                 , HUnit
